Potential fix for whitespace

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ a {
     flex-flow: row wrap;
     justify-content: space-around;
     width: 100%;
+    margin-right: -8px;
 }
 
 @media screen and (max-width: 500px) {  
